--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -35,7 +35,7 @@
 		<hr>
 		
 		<p>계정이 있다면? <a href="/login">로그인하기</a></p>
-		<button type="button" class="btn btn-light" href='/'>Home</button>
+		<button type="button" class="btn btn-light" onclick='location.href="/"'>Home</button>
 	</div>
 	  
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
