--- a/views/addpost.ejs
+++ b/views/addpost.ejs
@@ -15,7 +15,11 @@
 	  
 	 
 	<h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
-	
+	<% if (message.length > 0) { %>
+	  	<div class='container mt-4'>
+			<div class="alert alert-danger"><%= message %></div>
+		</div>
+	<% } else { %>
 	<div class='container mt-4'>
 		<form action='/process/addpost' method='POST'>
 			<div class='form-group'>
@@ -28,7 +32,8 @@
 			</div>
 			<button type='submit' class="btn btn-secondary">업로드</button>
 		</form>
-	  </div>
+	</div>
+	<% } %>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   </body>
