--- a/views/listpost.ejs
+++ b/views/listpost.ejs
@@ -1,195 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-		
-		<title>글 리스트</title>
-		
-  		<link href="/public/semantic.min.css" rel="stylesheet" >
-		
-		<style>
-			* {
-				padding:0;
-				margin:0;
-				box-sizing:border-box;
-			}
-			
-			html {
-				width:100%;
-				height:100%;
-			}
-			
-			body {
-				width:100%;
-				height:100%;
-				color: #000;
-				background-color: #fff;
-			}
-					
-			.container {
-				margin-right: auto;
-				margin-left: auto;
-				padding-left: 20px;
-				padding-right: 20px;
-			}
-	
-			span {
-				color: #333;
-			}
-			#board_title {
-				font-size:1.2em;
-				font-weight:bold;
-				color:teal;
-			}
-		</style>
-				
-		<script src="/public/jquery-2.1.4.min.js"></script>
-		<script src="/public/semantic.min.js"></script>
-		
-		<script>
-			function listpost(page, perPage) {
-				document.location = '/process/listpost?page=' + page + '&perPage=' + perPage;
-			}
-		</script>
-		
-	</head>
-	<body>
-    	
-    	<div class="container">
-    		<br>
-    		
-			<div class="ui raised segment">
-				<a class="ui blue ribbon label">게시판</a>
-      			<span id="board_title"><%=title %></span>
-			
-				
-				<div class="ui blue fluid card">
-					 <div class="content">
-       		
-			      		
-						<div class="ui grid">
-			   				<div class="two wide column">번호</div>
-			   				<div class="eight wide column">제목</div>
-			   				<div class="two wide column">작성자</div>
-			   				<div class="two wide column">작성일</div>
-			   				<div class="two wide column">조회수</div>
-			   			</div>
-				    		
-						<div class="ui very relaxed selection celled list">
-							<%  var noStart = (pageCount - page) * perPage;
-							
-							    for (var i = 0; i < posts.length; i++) {
-								   var curTitle = posts[i]._doc.title;
-								   var curContents = posts[i]._doc.contents;
-								   var curWriter = posts[i]._doc.writer.email;
-                                   var curHits = posts[i]._doc.hits;    
-								   var curNo = noStart - i;
-								   %>
-								    <div class="item">
-										<div class="ui grid">
-						    				<div class="two wide column"><%=curNo %></div>
-						    				<div class="fourteen wide column" onclick="javascript:window.location='/process/showpost/<%=posts[i]._id %>'">
-						    					<div class="ui header">
-										    		<h4 class="ui left aligned header">
-										    			<%=curTitle %>
-										    		</h4>
-											      	<h5 class="ui right aligned orange header">
-											      			<%=curWriter %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-											        		2015-06-01&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-											        		<%=curHits %>
-											      	</h5>
-												</div>
-						    				</div>
-						    			</div>
-						    		</div>
-							<% } %>	
-						 
-				    	</div>
-			    	 
-			       		<br>
-						<div class="tiny ui basic buttons">
-					 		<%
-					 			if (page > 0) {
-					 		%>
-					 				<div class="ui icon button" onclick="listpost(0, <%=perPage %>)">
-										<i class="backward icon"></i>
-									</div>
-									<div class="ui icon button" onclick="listpost(<%=(page-1) %>, <%=perPage %>)">
-										<i class="left chevron icon"></i>
-									</div>
-					 		<%
-					 			} else {
-					 		%>
-					 				<div class="ui disabled icon button">
-										<i class="backward icon"></i>
-									</div>
-									<div class="ui disabled icon button">
-										<i class="left chevron icon"></i>
-									</div>
-					 		<%
-					 			}
-					 		%>
-					 		<% 
-					 			var initial = Math.floor(page / 10) * 10;
-					 			console.log('initial : ' + initial);
-					 			
-					 			var max = pageCount - initial;
-					 			if (max > 10) {
-					 				max = initial + 10;
-					 			} else {
-					 				max = initial + max;
-					 			}
-					 			console.log('max : ' + max);
-					 			
-					 			for (var i = initial; i < max; i++) {
-					 				if (i != page) {
-					 		%>
-					 					<div class="ui button" onclick="listpost(<%=i %>, <%=perPage %>)">
-					 						<%= i %>
-					 					</div>
-					 		<%
-					 				} else {
-					 		%>
-					 					<div class="ui active basic button">
-					 						<%= i %>
-					 					</div>
-					 		<% 
-					 				}
-					 			}
-					 		%>
-					 		<%
-					 			if ((page+1) < pageCount) {
-					 		%>
-					 				<div class="ui icon button" onclick="listpost(<%=(page+1) %>, <%=perPage %>)">
-										<i class="right chevron icon"></i>
-									</div>
-									<div class="ui icon button" onclick="listpost(<%=(pageCount-1) %>, <%=perPage %>)">
-										<i class="forward icon"></i>
-									</div>
-					 		<%
-					 			} else {
-					 		%>
-					 				<div class="ui disabled icon button">
-										<i class="right chevron icon"></i>
-									</div>
-									<div class="ui disabled icon button">
-										<i class="forward icon"></i>
-									</div>
-					 		<%
-					 			}
-					 		%>
-					 	</div>
-						 	  
-						<br><br>
-						<a class="ui button" href='/process/listpost?page=0&perPage=2'>재요청</a>
-						<a class="ui button" href='/public/addpost.html'>글쓰기</a>
-						<a class="ui button" href='/' class="btn btn-default btn-sm">홈</a>
-					
-					</div>
-				</div>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+    <title>Write</title>
+  </head>
+  <body>
+    <%- include ("./nav.ejs") %>
+	  
+	 
+	<h4 class="container mt-4"><strong>글 리스트</strong></h4>
+
+	<ul class="list-group container mt-4">
+		<% if(posts.length > 0) { %>
+			<% for (var i = 0; i < posts.length; i++){ %>
+				<li class="list-group-item" id="<%= posts[i]._id %>">
+					<h4> 제목 : <%= posts[i].title %> </h4>
+					<p> 내용 : <%= posts[i].contents %> </p>
+					<button class='delete' data-id='<%= posts[i]._id %>'>삭제</button>
+				</li>
+			<% } %>
+		<% } else { %>
+			<div class='container mt-4'>
+				<div class="alert alert-primary" role="alert">현재 등록된 글이 없습니다.</div>
 			</div>
-		</div>
-		
-	</body>
+		<% } %>
+	</ul>
+	  
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	  
+	<script>
+		$('.delete').click( (e) => {
+			var postNum = e.target.dataset.id;
+			$.ajax({
+				method : 'DELETE',
+				url : '/process/delete',
+				data : { _id : postNum }
+			}).done( (results) => {
+				var deleteUI = '#' + postNum;
+				console.log('ui fadeout exec');
+				$(deleteUI).fadeOut();
+			}).fail( (xhr, textStatus, errThrown) => {
+				console.log("서버에서 보내온 오류 정보 : ", xhr, textStatus, errThrown);
+			});
+		})
+	</script>
+	  
+	  
+	  
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+  </body>
 </html>
