--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,7 +13,7 @@
   <body>
     <%- include ("./nav.ejs") %>
 	
-	<div class="container">			
+	<div class="container mt-4">			
 						
 		<div class="page-header text-center">
 			<h1><span class="fa fa-book"></span>내 정보</h1>
