--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <title><%= title %></title>
+    <title>글 조회</title>
   </head>
   <body>
-    
+    <%- include ("./nav.ejs") %>
 	  
 	<div class="container">
 		<h4 class="container mt-4"><strong><%= posts._doc.title %></strong></h4>
@@ -19,11 +19,47 @@
 		<ul class="list-group">
 			<li class="list-group-item">
 			<p> <%= posts._doc.contents %> </p>
-			<button type="button" class="btn btn-light" onclick='location.href="/listpost"'>Back</button>
+			<br>
 			</li>
 		</ul>
-	</div>
-	  
+	
+		<br>
+		<div class="comments">
+			<h4>댓글<span class="count"><span id="commentCount65_0"></span></span></h4>
+			<div class="comment-list">
+				<% for (var i = 0; i < posts._doc.comments.length; i++) { %>
+					<div class="comment">
+						<div class="sixteen wide column">
+							<div class="ui header">
+								<h4 class="ui left aligned header">
+									<%= posts._doc.comments[i].contents %>
+								</h4>
+								<h6 class="ui right aligned orange header" style="font-size: small;">
+									작성자 : <%= writer[i] %>
+								</h6>
+								<h6 class="ui right aligned orange header" style="font-size: x-small;">
+									작성 시간 : <%= created[i] %>
+								</h6>
+							</div>
+						</div>
+					</div>
+				<% } %>
+			</div>
+			<br>
+			<form action="/process/addcomment" method="POST">
+				<div class="field">
+					<label>댓글 달기</label>
+					<br><input type="text" name="contents" placeholder="enter your comment">
+				</div>
+				<input hidden type="text" name="writer" value="<%= user._id %>">
+				<input hidden type="text" name="id" value="<%= posts._doc._id %>">
+				
+				<br><input class="btn btn-outline-success btn-sm" type="submit" value="Enter" name="" />
+			</form>
+		</div>
+		
+		 <br><br><button type="button" class="btn btn-light" onclick='location.href="/listpost"'>Back</button>
+	</div>		
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   </body>
