--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -6,13 +6,13 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class='<%= arritem[0] %>'>
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class='<%= arritem[1] %>'>
         <a class="nav-link" href="/addpost">Write</a>
       </li>
-	  <li class="nav-item">
+	  <li class='<%= arritem[2] %>'>
         <a class="nav-link" href="/listpost">List</a>
       </li>
       <li class="nav-item dropdown">
@@ -29,12 +29,12 @@
     </ul>
 	<% if (login_success) { %>
 	  	<%= user.name %>
-		<a class="nav-link" href="/profile">MyPage</a>
-		<a class="nav-link" href="/logout">logout</a>
+		<strong><a class="nav-link" href="/profile">MyPage</a></strong>
+		<strong><a class="nav-link" href="/logout">logout</a></strong>
 
 	<% } else { %>
-		<a class="nav-link" href="/signup">Sign Up</a>
-		<a class="nav-link" href="/login">login</a>
+		<strong><a class="nav-link" href="/signup">Sign Up</a></strong>
+		<strong><a class="nav-link" href="/login">login</a></strong>
 	<% } %>
 	
   </div>
