--- a/views/addpost.ejs
+++ b/views/addpost.ejs
@@ -21,7 +21,7 @@
 		</div>
 	<% } else { %>
 	<div class='container mt-4'>
-		<form action='/process/addpost' method='POST'>
+		<form action='/process/addpost' method='POST' enctype='multipart/form-data'>
 			<div class='form-group'>
 				<label>제목</label>
 				<input type='text' class='form-control' name='title'>
@@ -29,6 +29,10 @@
 			<div class='form-group'>
 				<label>내용</label>
 				<input type='text' class='form-control' name='contents'>
+			</div>
+			<div class='form-group'>
+				<label>이미지 첨부</label>
+				<input type='file' class='form-control' name='image'>
 			</div>
 			<button type='submit' class="btn btn-secondary">업로드</button>
 		</form>
