--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -43,51 +43,23 @@
 				<img src="/<%=posts._doc.imageUrl %>" class="rounded" alt="이미지를 불러오지 못했습니다." id='imageUrl'>
 			</div>
 		<% } %>
-		<% if (login_success) { %>
-			<div class="comments">
-				<h4>댓글<span class="count"><span id="commentCount65_0"></span></span></h4>
-				<div class="comment-list">
-					<% for (var i = 0; i < posts._doc.comments.length; i++) { %>
-						<div class="comment">
-							<div class="sixteen wide column">
-								<div class="ui header">
-									<h4 class="ui left aligned header">
-										<%= posts._doc.comments[i].contents %>
-									</h4>
-									<h6 class="ui right aligned orange header" style="font-size: small;">
-										작성자 : <%= writer[i] %>
-									</h6>
-									<h6 class="ui right aligned orange header" style="font-size: x-small;">
-										작성 시간 : <%= created[i] %>
-									</h6>
-								</div>
-							</div>
-						</div>
-					<% } %>
-				</div>
-				<br>
-				<form action="/process/addcomment" method="POST">
-					<div class="field">
-						<label>댓글 달기</label>
-						<br><input type="text" name="contents" placeholder="enter your comment">
-					</div>
-					<input hidden type="text" name="writer" value="<%= user._id %>">
-					<input hidden type="text" name="id" value="<%= posts._doc._id %>">
-
-					<br><input class="btn btn-outline-success btn-sm" type="submit" value="Enter" name="" />
-				</form>
-			</div>
-
-		<% } else { %>
-			<div class="alert alert-warning">댓글 조회 및 작성은 로그인 하신 후 이용할 수 있는 기능입니다.</div>
-		<% } %>
+		
+		<%- include ("./comment.ejs") %>
 		
 		
-		 <br><br><button type="button" class="btn btn-light" onclick='location.href="/listpost"'>Back</button>
+		 <br><br><button type="button" class="btn btn-light" id='back' onclick='location.href=document.referrer'>Back</button>
 	</div>		
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 	<script>
+		//댓글 입력 후에 enter버튼 활성화
+		$("#comment").on("keyup", () => {
+			var flag = true;
+			flag = $("#comment").val().length > 0 ? false : true;
+			$("#addbtn").attr("disabled", flag);
+		});
+		
+		
 		
 		$('#edit').click( (e) => {
 			var postNum = e.target.dataset.id;
@@ -130,6 +102,46 @@
 				});
 			}
 		})
+		
+		// function addComment() {
+		// 	var formData = $('#addcomment').serialize() // serialize 사용
+		// 	console.log(formData);
+		// 	$.ajax({
+		// 		url: "/process/addcomment",
+		// 		type: "POST",
+		// 		cache: false,
+		// 		data: formData, // data에 바로 serialze한 데이터를 넣는다.
+		// 		success: (results) => {
+		// 			console.log('call view');
+		// 			// Contents 영역 제거
+		// 			$('#comments').children().remove();
+		// 			// Contents 영역 교체
+		// 			$('#comments').html(results);
+		// 			console.log(results);
+		// 		},
+		// 		error: (request, textStatus, errThrown) => {
+		// 			console.log(errThrown);
+		// 		}
+		// 	}) 
+		// }
+		function addComment() {
+			var formData = $('#addcomment').serialize() // serialize 사용
+			console.log(formData);
+			$.ajax({
+				url: "/process/addcomment",
+				method: "POST",
+				data: formData // data에 바로 serialze한 데이터를 넣는다.
+			}).done( (results) => {
+				console.log('call view');
+				// Contents 영역 제거
+				$('#comments').children().remove();
+				// Contents 영역 교체
+				$('#comments').html(results);
+				console.log(results);
+			}).fail( (xhr, textStatus, errThrown) => {
+				console.log("서버에서 보내온 오류 정보 : ", xhr, textStatus, errThrown);
+			});
+		}
 	</script>
 	  
 	  
