--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -28,7 +28,7 @@
 				</div>
 				<input hidden type="text" name="writer" value="<%= user._id %>">
 				<input hidden type="text" name="id" value="<%= posts._doc._id %>">
-				<br><input class="btn btn-outline-success btn-sm" id='addbtn' type="submit" value="Enter" name="" onclick='addComment();' disabled/>
+				<br><input class="btn btn-outline-success btn-sm" id='addbtn' value="Enter" onclick='addComment();' disabled/>
 			</form>
 		</div>
 
