--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -104,7 +104,7 @@
 		})
 		
 		function addComment() {
-			if($('#comment')[0].innerText !== '') {
+			if($('#comment')[0].value !== '') {
 				var formData = $('#addcomment').serializeArray(); // serialize 사용 -- 객체 형식으로
 				$.ajax({
 					method: "POST",
