--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,29 +11,19 @@
     <title>Service</title>
 	  
 	<style>
-		.btn-floating {
-			background-image: url(/public/images/buttons/chat.png);
-			color: #fff;
-			padding: 0;
-			width: 55.5px; height: 55.5px;
-			display: inline-block;
-			outline: 0;
-			border: none;
-			text-decoration: none;
-			background: #2196F3;
-			text-align: center;
-			border-radius: 50%;
-			box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-		}
-		.btn-floating:hover {
+		
+		.float:hover {
 			background: #42A5F5;
 		}
-		.btn-floating div {
+		.float div {
 			font-size: 1.8em;
 			padding: 0;
 			margin: .22em 0 0 0;
 		}
-</style>
+		
+		
+		
+	</style>
 	  
 	<style>
 		.left {
@@ -45,11 +35,92 @@
 		.right {
 			width: 50%;
 			float: right;
-			box-sizing: border-box;
-			background: #ece6cc;
 			padding: 5px;
     	}
     </style>
+	  
+	<style>
+		.float{
+		  position: fixed;
+		  width: 60px;
+		  height: 60px;
+		  bottom: 40px;
+		  right: 22px;
+		  background-color: #0C9;
+		  color: #FFF;
+		  border-radius: 50px;
+		  text-align: center;
+		  box-shadow: 2px 2px 3px #999;
+		}
+
+		.my-float{
+		  margin-top:22px;
+		}
+
+
+		.label-container{
+		  position:fixed;
+		  bottom:48px;
+		  right:105px;
+		  display:table;
+		  visibility: hidden;
+		}
+
+		.label-text{
+		  color:#FFF;
+		  background:rgba(51,51,51,0.5);
+		  display:table-cell;
+		  vertical-align:middle;
+		  padding:10px;
+		  border-radius:3px;
+		}
+
+		.label-arrow{
+		  display:table-cell;
+		  vertical-align:middle;
+		  color:#333;
+		  opacity:0.5;
+		}
+
+		.my-float{
+		  font-size:24px;
+		  margin-top:18px;
+		}
+
+		a.float + div.label-container {
+		  visibility: hidden;
+		  opacity: 0;
+		  transition: visibility 0s, opacity 0.5s ease;
+		}
+
+		a.float:hover + div.label-container{
+		  visibility: visible;
+		  opacity: 1;
+		}
+
+		a.float:hover .user-req-list {
+		  visibility: collapse;
+		}
+
+		.user-req-list {
+		  visibility: hidden;
+		}
+		
+		.chatbox {
+			width: 33%;
+			height: 55%;
+			position: absolute;
+			right: 0px;
+			bottom: -6%;
+			border-radius: 10px;
+			box-shadow: 5px 5px 15px rgba($dark, 0.5);
+			margin-right: 5px;
+			margin-bottom: 10%;
+			box-sizing: border-box;
+			background: #ece6cc;
+			padding: 5px;
+		}
+	</style>
   </head>
   <body>
     <%- include ("./nav.ejs") %>
@@ -102,23 +173,40 @@
 		  </div>
 		</div>
 		<div class='right'>
-			<li class="list-group-item">실시간 채팅방입니다.</li>
-			<ul class="list-group" style='height: 300px; overflow-y: scroll;'>
-			  
-			</ul>
-
-			<div class="input-group mt-3">
-				<input type="text" class="form-control" id='sendmsg' placeholder="메시지를 입력하세요." onKeyPress='event.keyCode == 13 && send();' aria-describedby="button-addon2">
-				<div class="input-group-append">
-					<button class="btn btn-outline-secondary" type="button" id="send" onclick='send();'>전송</button>
-				</div>
-			</div>
+			<li class="list-group-item">빈 공간</li>
 		</div>
 	  </div>
+	  
+	<div class="chatbox" style='display:none;'>
+		<li class="list-group-item">실시간 채팅방입니다.</li>
+		<ul class="list-group" style='height: 79%; overflow-y: scroll;'>
+
+		</ul>
+
+		<div class="input-group mt-3">
+			<input type="text" class="form-control" id='sendmsg' placeholder="메시지를 입력하세요." onKeyPress='event.keyCode == 13 && send();' aria-describedby="button-addon2">
+			<div class="input-group-append">
+				<button class="btn btn-outline-secondary" type="button" id="send" onclick='send();'>전송</button>
+			</div>
+		</div>
+	</div>
+	  
+	  
+	<div class="dropup">
+	  <a class="float"  role="button">
+		<i class="fa fa-plus my-float"></i>
+	  </a>
+	  <div class="label-container">
+		<div class="label-text">Chating</div>
+		<i class="fa fa-play label-arrow"></i>
+	  </div>
+		
+	</div>
+	  
+	  
 	  <button id='joinpub'>join public</button>
 	  <button id='join1'>join room_1</button>
 	  <button id='join2'>join room_2</button>
-	  <button class='btn-floating' style="position: absolute; right: 25px; bottom: 25px;"></button>
 	
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<!-- client용 script -->
@@ -155,6 +243,15 @@
 				socket.emit('sendmsg', sendmsg);
 			}
 		}
+		
+		//chating box 켜고 끄기
+		$(".float").click( () => {
+			if($(".chatbox")[0].style.display == 'none'){
+				$(".chatbox")[0].style.display = 'block';
+			}else{
+				$(".chatbox")[0].style.display = 'none';
+			}
+		})
 		
 	</script>
 	  
