--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -10,117 +10,7 @@
 
     <title>Service</title>
 	  
-	<style>
-		
-		.float:hover {
-			background: #42A5F5;
-		}
-		.float div {
-			font-size: 1.8em;
-			padding: 0;
-			margin: .22em 0 0 0;
-		}
-		
-		
-		
-	</style>
-	  
-	<style>
-		.left {
-			width: 50%;
-			float: left;
-			box-sizing: border-box;
-			background: #ffffff;
-    	}
-		.right {
-			width: 50%;
-			float: right;
-			padding: 5px;
-    	}
-    </style>
-	  
-	<style>
-		.float{
-		  position: fixed;
-		  width: 60px;
-		  height: 60px;
-		  bottom: 40px;
-		  right: 22px;
-		  background-color: #0C9;
-		  color: #FFF;
-		  border-radius: 50px;
-		  text-align: center;
-		  box-shadow: 2px 2px 3px #999;
-		}
-
-		.my-float{
-		  margin-top:22px;
-		}
-
-
-		.label-container{
-		  position:fixed;
-		  bottom:48px;
-		  right:105px;
-		  display:table;
-		  visibility: hidden;
-		}
-
-		.label-text{
-		  color:#FFF;
-		  background:rgba(51,51,51,0.5);
-		  display:table-cell;
-		  vertical-align:middle;
-		  padding:10px;
-		  border-radius:3px;
-		}
-
-		.label-arrow{
-		  display:table-cell;
-		  vertical-align:middle;
-		  color:#333;
-		  opacity:0.5;
-		}
-
-		.my-float{
-		  font-size:24px;
-		  margin-top:18px;
-		}
-
-		a.float + div.label-container {
-		  visibility: hidden;
-		  opacity: 0;
-		  transition: visibility 0s, opacity 0.5s ease;
-		}
-
-		a.float:hover + div.label-container{
-		  visibility: visible;
-		  opacity: 1;
-		}
-
-		a.float:hover .user-req-list {
-		  visibility: collapse;
-		}
-
-		.user-req-list {
-		  visibility: hidden;
-		}
-		
-		.chatbox {
-			width: 33%;
-			height: 55%;
-			position: absolute;
-			right: 0px;
-			bottom: -6%;
-			border-radius: 10px;
-			box-shadow: 5px 5px 15px rgba($dark, 0.5);
-			margin-right: 5px;
-			margin-bottom: 10%;
-			box-sizing: border-box;
-			background: #ece6cc;
-			padding: 5px;
-		}
-	</style>
+	<link rel="stylesheet" href="/public/css/chat.css"/>
   </head>
   <body>
     <%- include ("./nav.ejs") %>
@@ -176,33 +66,30 @@
 			<li class="list-group-item">빈 공간</li>
 		</div>
 	  </div>
-	  
-	<div class="chatbox" style='display:none;'>
-		<li class="list-group-item">실시간 채팅방입니다.</li>
-		<ul class="list-group" style='height: 79%; overflow-y: scroll;'>
+	<div class='chatUI'>
+		<div class="chatbox" style='display:none;'>
+			<li class="list-group-item">실시간 채팅방입니다.</li>
+			<ul class="list-group" style='height: 79%; overflow-y: scroll;'>
 
-		</ul>
+			</ul>
 
-		<div class="input-group mt-3">
-			<input type="text" class="form-control" id='sendmsg' placeholder="메시지를 입력하세요." onKeyPress='event.keyCode == 13 && send();' aria-describedby="button-addon2">
-			<div class="input-group-append">
-				<button class="btn btn-outline-secondary" type="button" id="send" onclick='send();'>전송</button>
+			<div class="input-group mt-3">
+				<input type="text" class="form-control" id='sendmsg' placeholder="메시지를 입력하세요." onKeyPress='event.keyCode == 13 && send();' aria-describedby="button-addon2">
+				<div class="input-group-append">
+					<button class="btn btn-outline-secondary" type="button" id="send" onclick='send();'>전송</button>
+				</div>
 			</div>
 		</div>
+
+
+		<a class="float"  role="button">
+			<i class="fa fa-plus my-float"></i>
+		</a>
+		<div class="label-container">
+			<div class="label-text">Chating</div>
+			<i class="fa fa-play label-arrow"></i>
+		</div>
 	</div>
-	  
-	  
-	<div class="dropup">
-	  <a class="float"  role="button">
-		<i class="fa fa-plus my-float"></i>
-	  </a>
-	  <div class="label-container">
-		<div class="label-text">Chating</div>
-		<i class="fa fa-play label-arrow"></i>
-	  </div>
-		
-	</div>
-	  
 	  
 	  <button id='joinpub'>join public</button>
 	  <button id='join1'>join room_1</button>
@@ -211,49 +98,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<!-- client용 script -->
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js'></script>
-	  
-	<script>
-		var socket = io('/chat');
-		socket.emit('req', 'public');
-		socket.on('broadcast', (data) => {
-			$('.list-group').append('<li class="list-group-item">' + data + '</li>');
-			$('.list-group').scrollTop($('.list-group').prop('scrollHeight'));
-			$('#sendmsg')[0].value = '';
-		})
-		
-		$('#joinpub').click( () => {
-			//socket.io 라이브러리 사용
-			socket.emit('req', 'public'); //namespace 사용	
-		})
-		
-		$('#join1').click( () => {
-			
-			socket.emit('req', 'room_1');
-		})
-		$('#join2').click( () => {
-			var pw = prompt('비밀번호를 입력해주세요.');
-			console.log(pw)
-			socket.emit('req', {roomnum: 'room_2', pw: pw});
-		})
-		//data 전송 함수
-		function send() {
-			console.log('send() has been active');
-			if($("#sendmsg").val().length > 0) {
-				var sendmsg = $("#sendmsg").val();
-				socket.emit('sendmsg', sendmsg);
-			}
-		}
-		
-		//chating box 켜고 끄기
-		$(".float").click( () => {
-			if($(".chatbox")[0].style.display == 'none'){
-				$(".chatbox")[0].style.display = 'block';
-			}else{
-				$(".chatbox")[0].style.display = 'none';
-			}
-		})
-		
-	</script>
+	<!-- socket.io 관련 js -->
+	<script src='/public/js/chat.js'></script>
 	  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   </body>
