--- a/views/chatpage.ejs
+++ b/views/chatpage.ejs
@@ -1,424 +1,24 @@
-<!doctype html>
-<html>
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
-    <title>Service</title>
-	  
-	<style>
-
-		$primary: #79C7C5;
-		$secondary: #A1E2D9;
-		$white: #F9FBFF;
-		$dark: #777777;
-
-		html {
-		  display: grid;
-		  min-height: 100%;
-		}
-
-		body {
-		  display: grid;
-		  background: linear-gradient(to bottom left, $primary 40%, $white 100%);
-		  font-family: $font;
-		}
-
-		.container {
-		  position: relative;
-		  margin: 12% auto;
-		  width: 620px;
-		  height: 450px;
-		}
-
-		.messages {
-		  position: absolute;
-		  background: $white;
-		  opacity: 0.5;
-		  width: 30%;
-		  height: 70%;
-		  top: 2.5%;
-		  left: 5%;
-		  border-radius: 10px 0 0 10px;
-		  box-shadow: -5px 5px 10px rgba($dark, .5);
-		}
-
-		/*chat messages */
-		.people {
-		  position: absolute;
-		  list-style-type: none;
-		  width: 30.2%;
-		  left: -10px;
-		  top: 24.7%;
-		  line-height: 0.7em;
-		}
-
-		.person {
-		  padding: 12px 0 12px 12px;
-		  border-bottom: 1px solid $primary;
-		  cursor: pointer;
-		  &:hover {
-			background: $white;
-			transition: all .3s ease-in-out;
-		  }
-		}
-
-		.focus {
-		  background: $white;
-		  margin-left: 1px;
-		}
-
-		.profile {
-		  position: absolute;
-		  left: 16%;
-		  top: 7%;
-		}
-
-		.name2{
-		  position: absolute;
-		  top: 50px;
-		  left: 2px;
-		  text-transform: uppercase;
-		  color: $primary;
-		  font-size: .8em;
-		  letter-spacing: 2px;
-		  font-weight: 500;
-		}
-		.email {
-		  color: $white;
-		  font-size: .5em;
-		  margin-left: -30px;
-		  margin-top: 2px;
-		}
-
-		.chatbox {
-			width: 33%;
-			height: 55%;
-			position: absolute;
-			right: 0px;
-			bottom: 0px;
-			border-radius: 10px;
-			box-shadow: 5px 5px 15px rgba($dark, 0.5);
-			margin-right: 5px;
-			margin-bottom: 10%;
-		}
-
-		.top-bar {
-		  width: 100%;
-		  height: 60px;
-		  background: $white;
-		  border-radius: 10px 10px 0 0;
-		}
-
-		.avatar {
-		  width: 35px;
-		  height: 35px;
-		  background: linear-gradient(to bottom left, $primary 20%, $secondary 100%);
-		  border-radius: 50%;
-		  position: absolute;
-		  top: 11px;
-		  left: 15px;
-		}
-
-		.name {
-		  position: absolute;
-		  top: 22px;
-		  text-transform: uppercase;
-		  color: $dark;
-		  font-size: .8em;
-		  letter-spacing: 2px;
-		  font-weight: 500;
-		  left: 60px;
-		}
-
-		.menu {
-		  position: absolute;
-		  right: 10px;
-		  top: 20px;
-		  width: 10px;
-		  height: 20px;
-		  cursor: pointer;
-		  &:hover {
-			transform: scale(1.1);
-			transition: all .3s ease-in;
-		  }
-		}
-
-		.icons {
-		  position: absolute;
-		  color: $secondary;
-		  padding: 10px;
-		  top: 5px;
-		  right: 21px;
-		  cursor: pointer;
-		}
-
-		.dots {
-		  width: 4px;
-		  height: 4px;
-		  border-radius: 50%;
-		  background-color: $primary;
-		  box-shadow: 0px 7px 0px $primary, 0px 14px 0px $primary;
-		}
-
-		.middle {
-		  position: absolute;
-		  background: $white;
-		  width: 100%;
-		  opacity: 0.85;
-		  top: 60px;
-		  height: 80%;
-		}
-
-		.incoming {
-		  position: absolute;
-		  width: 50%;
-		  height: 100%;
-		  padding: 20px;
-		}
-
-		.typing {
-		  position: absolute;
-		  top: 67%;
-		  left: 20px;
-		}
-
-
-		.ellipsis {
-		  width: 5px;
-		  height: 5px;
-		  display: inline-block;
-		  background: lighten($dark, 25%);
-		  border-radius: 50%;
-		  animation: bounce 1.3s linear infinite;
-		}
-
-		.one {
-		  animation-delay: 0.6s;
-		}
-		.two {
-		  animation-delay: 0.5s;
-		}
-		.three {
-		  animation-delay: 0.8s;
-		}
-
-		.bubble {
-		  position: relative;
-		  display: inline-block;
-		  margin-bottom: 5px;
-		  color: $white;
-		  font-size: 0.7em;
-		  padding: 10px 10px 10px 12px;
-		  border-radius: 20px;
-		}
-
-		.lower {
-		  margin-top: 45px;
-		}
-
-		.outgoing {
-		  position: absolute;
-		  padding: 20px;
-		  right: 0;
-		  top: 15%;
-		  width: 50%;
-		  height: 100%;
-		}
-
-
-		.bottom-bar {
-		  position: absolute;
-		  width: 100%;
-		  height: 55px;
-		  bottom: 0;
-		  background: $white;
-		  border-radius: 0 0 10px 10px;
-		}
-
-		.left {
-		  left: 0px;
-		}
-
-		input {
-		  padding: 7px;
-		  width: 74%;
-		  left: 5%;
-		  position: absolute;
-		  border: 0;
-		  top: 13px;
-		  background: $white;
-		  color: $primary;
-
-		}
-
-		input::placeholder {
-		  color: $secondary;
-		}
-
-		input:focus {
-		  color: $dark;
-		  outline: 0;
-		}
-
-		button {
-		  position: absolute;
-		  border: 0;
-		  font-size: 1em;
-		  color: $secondary;
-		  top:  19px;
-		  opacity: 0.8;
-		  right: 17px;
-		  cursor: pointer;
-		  outline: 0;
-		  &:hover {
-			transform: scale(1.1);
-			transition: all .3s ease-in-out;
-			color: $primary;
-		  }
-		}
-
-
-
-		footer {
-		  position: absolute;
-		  bottom: 0;
-		  right: 0;
-		  text-align: center;
-		  font-size: 0.7em;
-		  padding: 10px;
-		  }
-		}
-
-
-		@keyframes bounce {
-		  30% { transform: translateY(-2px); }
-		  60% { transform: translateY(0px); }
-		  80% { transform: translateY(2px); }
-		  100% { transform: translateY(0px); opacity: 0.5;  }
-		}
-    </style>
-	  
-	<style>
-		.float{
-		  position:fixed;
-		  width:60px;
-		  height:60px;
-		  bottom:40px;
-		  right:40px;
-		  background-color:#0C9;
-		  color:#FFF;
-		  border-radius:50px;
-		  text-align:center;
-		  box-shadow: 2px 2px 3px #999;
-		}
-
-		.my-float{
-		  margin-top:22px;
-		}
-
-
-		.label-container{
-		  position:fixed;
-		  bottom:48px;
-		  right:105px;
-		  display:table;
-		  visibility: hidden;
-		}
-
-		.label-text{
-		  color:#FFF;
-		  background:rgba(51,51,51,0.5);
-		  display:table-cell;
-		  vertical-align:middle;
-		  padding:10px;
-		  border-radius:3px;
-		}
-
-		.label-arrow{
-		  display:table-cell;
-		  vertical-align:middle;
-		  color:#333;
-		  opacity:0.5;
-		}
-
-		.my-float{
-		  font-size:24px;
-		  margin-top:18px;
-		}
-
-		a.float + div.label-container {
-		  visibility: hidden;
-		  opacity: 0;
-		  transition: visibility 0s, opacity 0.5s ease;
-		}
-
-		a.float:hover + div.label-container{
-		  visibility: visible;
-		  opacity: 1;
-		}
-
-		a.float:hover .user-req-list {
-		  visibility: collapse;
-		}
-
-		.user-req-list {
-		  visibility: hidden;
-		}
-	</style>
-  </head>
-  <body>
-    <%- include ("./nav.ejs") %>
-	  
+<div class='chatUI'>
 	<div class="chatbox" style='display:none;'>
 		<li class="list-group-item">실시간 채팅방입니다.</li>
-			<ul class="list-group" style='height: 300px; overflow-y: scroll;'>
-			  
-			</ul>
+		<ul class="list-group chatPage" style='height: 79%; overflow-y: scroll;'>
 
-			<div class="input-group mt-3">
-				<input type="text" class="form-control" id='sendmsg' placeholder="메시지를 입력하세요." onKeyPress='event.keyCode == 13 && send();' aria-describedby="button-addon2">
-				<div class="input-group-append">
-					<button class="btn btn-outline-secondary" type="button" id="send" onclick='send();'>전송</button>
-				</div>
+		</ul>
+
+		<div class="input-group mt-3">
+			<input type="text" class="form-control" id='sendmsg' placeholder="메시지를 입력하세요." onKeyPress='event.keyCode == 13 && send();' aria-describedby="button-addon2">
+			<div class="input-group-append">
+				<button class="btn btn-outline-secondary" type="button" id="send" onclick='send();'>전송</button>
 			</div>
-		
+		</div>
 	</div>
-	  
-	  
-	<div class="dropup">
-	  <a class="float"  role="button">
+
+
+	<a class="float"  role="button">
 		<i class="fa fa-plus my-float"></i>
-	  </a>
-	  <div class="label-container">
+	</a>
+	<div class="label-container">
 		<div class="label-text">Chating</div>
 		<i class="fa fa-play label-arrow"></i>
-	  </div>
-		
 	</div>
-			
-	
-	
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<!-- client용 script -->
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js'></script>
-	  
-	<script>
-		$(".float").click( () => {
-			if($(".chatbox")[0].style.display == 'none'){
-				$(".chatbox")[0].style.display = 'block';
-			}else{
-				$(".chatbox")[0].style.display = 'none';
-			}
-		})
-	
-	</script>
-	  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-  </body>
-</html>
-
+</div>
