--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -20,7 +20,7 @@
           Dropdown
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">unset</a>
+          <a class="dropdown-item" href="/chat">Chat</a>
           <a class="dropdown-item" href="#">unset</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
