--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="/public/css/chat.css"/>
     <title>My_page</title>
   </head>
   <body>
@@ -68,8 +68,8 @@
 		</div>
 
 	</div>
-	  
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<%- include ("./chatpage.ejs") %>  
+    <%- include ("./footer.ejs") %>
 	  
 	<script>
 		function search() {
@@ -77,7 +77,5 @@
 			location.href = '/process/search?value=' + idinfo + '&ops=' + 'writer';
 		}
 	</script>
-	  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   </body>
 </html>
