--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="/public/css/chat.css"/>
     <title>Sign_up</title>
   </head>
   <body>
@@ -37,8 +37,7 @@
 		<p>계정이 있다면? <a href="/login">로그인하기</a></p>
 		<button type="button" class="btn btn-light" onclick='location.href="/"'>Home</button>
 	</div>
-	  
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+	<%- include ("./chatpage.ejs") %>  
+    <%- include ("./footer.ejs") %>
   </body>
 </html>
