--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -1,9 +1,9 @@
 <% if (login_success) { %>
 		<div class="comments">
-			<h4>댓글<span class="count badge badge-pill badge-info"><span id="commentCount65_0"></span><%=posts._doc.comments.length %></span></h4>
+			<h4>댓글<span class="count badge badge-pill badge-info" id='commentCnt'><span id="commentCount65_0"></span><%=posts._doc.comments.length %></span></h4>
 			<div class="comment-list">
 				<% for (var i = 0; i < posts._doc.comments.length; i++) { %>
-					<div class="comment">
+					<div class="comment" id='<%= posts._doc.comments[i]._id %>'>
 						<h6 class="commentContents" style="font-size: small;">
 							<%= writer[i] %>
 						</h6>
@@ -13,14 +13,14 @@
 						<h6 class="commentContents" style="font-size: x-small;">
 							<%= created[i] %>
 						</h6>
-						<div class="btn-group dropleft">
-							<button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<div class="btn-group dropleft ops">
+							<button type="button" class="btn btn-outline dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							⋮
 							</button>
 							<div class="dropdown-menu">
 								<button class="dropdown-item editComment" type="button" value='<%= posts._doc.comments[i]._id %>'>edit</button>
 								<button class="dropdown-item deleteComment" type="button"
-										onclick='delComment();' value='<%= posts._doc.comments[i]._id %>'>delete</button>
+										data-id='<%= posts._doc.comments[i]._id %>'>delete</button>
 							</div>
 						</div>
 					</div>
