--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 	<link rel="stylesheet" href="/public/css/chat.css"/>
+	<link rel="stylesheet" href="/public/css/home.css"/>
     <title>main_page</title>
   </head>
   <body>
@@ -22,21 +23,21 @@
 		  </ol>
 		  <div class="carousel-inner">
 			<div class="carousel-item active">
-			  <img src="/public/images/carousel0.jpg" class="d-block w-100" alt="...">
+			  <img src="/public/images/carousel0.jpg" class="imgSection" alt="...">
 			  <div class="carousel-caption d-none d-md-block">
 				<h5>First slide label</h5>
 				<p>Some representative placeholder content for the first slide.</p>
 			  </div>
 			</div>
 			<div class="carousel-item">
-			  <img src="/public/images/carousel1.jpg" class="d-block w-100" alt="...">
+			  <img src="/public/images/carousel1.jpg" class="imgSection" alt="...">
 			  <div class="carousel-caption d-none d-md-block">
 				<h5>Second slide label</h5>
 				<p>Some representative placeholder content for the second slide.</p>
 			  </div>
 			</div>
 			<div class="carousel-item">
-			  <img src="/public/images/carousel2.jpg" class="d-block w-100" alt="..." style='height: 484.38px;'>
+			  <img src="/public/images/carousel2.jpg" class="imgSection" alt="...">
 			  <div class="carousel-caption d-none d-md-block">
 				<h5>Third slide label</h5>
 				<p>Some representative placeholder content for the third slide.</p>
