--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -69,7 +69,7 @@
 	<div class='chatUI'>
 		<div class="chatbox" style='display:none;'>
 			<li class="list-group-item">실시간 채팅방입니다.</li>
-			<ul class="list-group" style='height: 79%; overflow-y: scroll;'>
+			<ul class="list-group chatPage" style='height: 79%; overflow-y: scroll;'>
 
 			</ul>
 
