--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -4,13 +4,13 @@
 			<div class="comment-list">
 				<% for (var i = 0; i < posts._doc.comments.length; i++) { %>
 					<div class="comment" id='<%= posts._doc.comments[i]._id %>'>
-						<h6 class="commentContents" style="font-size: small;">
+						<h6 class="commentContents writer" style="font-size: small;">
 							<%= writer[i] %>
 						</h6>
-						<h4 class="commentContents">
+						<h4 class="commentContents contents">
 							<%= posts._doc.comments[i].contents %>
 						</h4>
-						<h6 class="commentContents" style="font-size: x-small;">
+						<h6 class="commentContents created" style="font-size: x-small;">
 							<%= created[i] %>
 						</h6>
 						<div class="btn-group dropleft ops">
@@ -18,7 +18,7 @@
 							⋮
 							</button>
 							<div class="dropdown-menu">
-								<button class="dropdown-item editComment" type="button" value='<%= posts._doc.comments[i]._id %>'>edit</button>
+								<button class="dropdown-item editComment" type="button" data-id='<%= i %>'>edit</button>
 								<button class="dropdown-item deleteComment" type="button"
 										data-id='<%= posts._doc.comments[i]._id %>'>delete</button>
 							</div>
