--- a/views/modifyComment.ejs
+++ b/views/modifyComment.ejs
@@ -1,2 +1,2 @@
 <input class="commentContents modifingcontents" value='<%= commentContents %>'>
-<span class="count badge badge-pill badge-info" id='modifyCommentBtn' style='cursor:pointer;'>수정</span>
+<span class="count badge badge-pill badge-info" id='modifyCommentBtn' data-id='<%= location %>' style='cursor:pointer;'>수정</span>
