--- a/views/chatpage.ejs
+++ b/views/chatpage.ejs
@@ -1,24 +1,24 @@
-<div class='chatUI'>
-	<div class="chatbox" style='display:none;'>
-		<li class="list-group-item">실시간 채팅방입니다.</li>
-		<ul class="list-group chatPage" style='height: 79%; overflow-y: scroll;'>
+<!--<div class='chatUI'>-->
+<div class="chatbox" style='display:none;'>
+	<li class="list-group-item">실시간 채팅방입니다.</li>
+	<ul class="list-group chatPage" style='height: 79%; overflow-y: scroll;'>
 
-		</ul>
+	</ul>
 
-		<div class="input-group mt-3">
-			<input type="text" class="form-control" id='sendmsg' placeholder="메시지를 입력하세요." onKeyPress='event.keyCode == 13 && send();' aria-describedby="button-addon2">
-			<div class="input-group-append">
-				<button class="btn btn-outline-secondary" type="button" id="send" onclick='send();'>전송</button>
-			</div>
+	<div class="input-group mt-3">
+		<input type="text" class="form-control" id='sendmsg' placeholder="메시지를 입력하세요." onKeyPress='event.keyCode == 13 && send();' aria-describedby="button-addon2">
+		<div class="input-group-append">
+			<button class="btn btn-outline-secondary" type="button" id="send" onclick='send();'>전송</button>
 		</div>
 	</div>
-
-
-	<a class="float"  role="button">
-		<i class="fa fa-plus my-float"></i>
-	</a>
-	<div class="label-container">
-		<div class="label-text">Chating</div>
-		<i class="fa fa-play label-arrow"></i>
-	</div>
 </div>
+
+
+<a class="float"  role="button">
+	<i class="fa fa-plus my-float"></i>
+</a>
+<div class="label-container">
+	<div class="label-text">Chating</div>
+	<i class="fa fa-play label-arrow"></i>
+</div>
+<!--</div>-->
