commit db 대폭 수정

--- a/views/modifyComment.ejs
+++ b/views/modifyComment.ejs
@@ -1,2 +1,3 @@
 <input class="commentContents modifingcontents" value='<%= commentContents %>'>
-<span class="count badge badge-pill badge-info" id='modifyCommentBtn' data-id='<%= location %>' style='cursor:pointer;'>수정</span>
+<input type='hidden' value='<%=location %>'>
+<span class="count badge badge-pill badge-info" id='modifyCommentBtn' data-id='<%=commentId %>' style='cursor:pointer;'>수정</span>
