--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -5,26 +5,25 @@
 				<% for (var i = 0; i < posts._doc.comments.length; i++) { %>
 					<div class="comment" id='<%= posts._doc.comments[i]._id %>'>
 						<h6 class="commentContents writer" style="font-size: small;">
-							<%= writer[i] %>
+							<%=comments[i].writerName %>
 						</h6>
 						<h4 class="commentContents contents">
-							<%= posts._doc.comments[i].contents %>
+							<%=comments[i].contents %>
 						</h4>
 						<h6 class="commentContents created" style="font-size: x-small;">
-							<%= created[i] %>
+							<%=comments[i].created_at %>
 						</h6>
 						<div class="btn-group dropleft ops">
 							<button type="button" class="btn btn-outline dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							⋮
 							</button>
 							<div class="dropdown-menu">
-								<button class="dropdown-item editComment" type="button" data-id='<%= i %>'>edit</button>
+								<button class="dropdown-item editComment" type="button" name='<%= i %>' data-id='<%=comments[i]._id %>'>edit</button>
 								<button class="dropdown-item deleteComment" type="button"
 										data-id='<%= posts._doc.comments[i]._id %>'>delete</button>
 							</div>
 						</div>
 					</div>
-					
 				<% } %>
 			</div>
 			<br>
@@ -34,6 +33,7 @@
 					<br><input type="text" id='comment' name="contents" placeholder="enter your comment" onKeyPress='event.keyCode == 13 && addComment();'>
 				</div>
 				<input hidden type="text" name="writer" value="<%= user._id %>">
+				<input hidden type="text" name="writerN" value="<%= user.name %>">
 				<input hidden type="text" name="id" value="<%= posts._doc._id %>">
 				<br><input class="btn btn-outline-success btn-sm" id='addbtn' value="Enter" onclick='addComment();' disabled/>
 			</form>
